--- a/spring_single/src/main/webapp/WEB-INF/web.xml
+++ b/spring_single/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,6 @@
 	</welcome-file-list>
 	
 	<!-- 如果不做配置，在启动服务器的时候不会加载xml配置文件，需要在代码中手动指定 -->
-	<!-- spring配置文件路径contextConfigLocation默认值为/WEB-INF/applicationContext.xml -->
+	<!-- 如果context-param未配置contextConfigLocation, 则默认取/WEB-INF/applicationContext.xml -->
 	
 </web-app>
