--- a/spring_single/src/main/webapp/WEB-INF/web.xml
+++ b/spring_single/src/main/webapp/WEB-INF/web.xml
@@ -14,16 +14,14 @@
 	</welcome-file-list>
 	
 	<!-- web项目整合Spring第二步：装配Spring配置文件（BeanFactory）的第一种方法，通过web.xml配置实现 -->
-<!-- 	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:applicationContext.xml</param-value>
-	</context-param>
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>	 -->
-
-
-	<!-- 如果不做配置，在启动服务器的时候不会加载xml配置文件，需要在代码中手动指定 -->
 	<!-- 如果context-param未配置contextConfigLocation, 则默认取/WEB-INF/applicationContext.xml -->
+	<!-- 如果不做配置，在启动服务器的时候不会装配Spring配置文件，需要在相应的注解/代码中指定（可能会在用到时才装配） -->
+<!--  	<context-param> -->
+<!-- 		<param-name>contextConfigLocation</param-name> -->
+<!-- 		<param-value>classpath:applicationContext.xml</param-value> -->
+<!-- 	</context-param> -->
+<!-- 	<listener> -->
+<!-- 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class> -->
+<!-- 	</listener> -->
 	
 </web-app>
