--- a/spingmvc_spring_hibernate_integration/src/main/webapp/WEB-INF/web.xml
+++ b/spingmvc_spring_hibernate_integration/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 	<display-name>spingmvc_single</display-name>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
-		<welcome-file>/WEB-INF/pages/index.jsp</welcome-file>
+		<welcome-file>/WEB-INF/views/index.jsp</welcome-file>
 		<welcome-file>index.htm</welcome-file>
 		<welcome-file>default.html</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
