--- a/spingmvc_spring_hibernate_integration/pom.xml
+++ b/spingmvc_spring_hibernate_integration/pom.xml
@@ -106,6 +106,13 @@
 			<version>1.1.1</version>
 		</dependency>
 		
+		<!-- database -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.28</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
