--- a/springboot_integration/src/main/resources/application.properties
+++ b/springboot_integration/src/main/resources/application.properties
@@ -12,8 +12,7 @@ spring.mvc.view.suffix=.jsp
 # default connection pool：com.zaxxer.hikari.HikariDataSource
 # spring.datasource.type=other pool
 spring.datasource.url=jdbc:mysql://localhost:3306/crm_demo?characterEncoding=utf-8&useSSL=false
-# Needn't write Driver in high version of jdbc, auto find driver by url
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -23,7 +22,11 @@ spring.jpa.show-sql=true
 spring.jpa.format-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#值thread全称org.hibernate.context.internal.ThreadLocalSessionContext - 当前session通过当前执行的线程来跟踪和界定,需手动管理事务
 spring.jpa.properties.hibernate.current_session_context_class=thread
+#并没有生效，使用@Transactional时有问题，存疑
+#将session交给Spring管理（使用SpringSession）,Spring管理事务中current session是绑定下springsessioncontext中的
+#spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 
 # upload
 
