--- a/springboot_integration/src/main/resources/application.properties
+++ b/springboot_integration/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # database and connection pool
-# default connection pool：com.zaxxer.hikari.HikariDataSource
-# spring.datasource.type=other pool
-spring.datasource.url=jdbc:mysql://localhost:3306/crm_demo?characterEncoding=utf-8&useSSL=false
+# in springboot2, default connection pool：com.zaxxer.hikari.HikariDataSource
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/crm_demo?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
